--- a/style.css
+++ b/style.css
@@ -48,3 +48,21 @@ body{
     width: 100%;
     height: 90vh;
 }
+
+.wellness-section, .library-section, .progress-section{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    padding: 1em;
+}
+
+/* .wellness-section{
+}
+
+.library-section{
+
+}
+
+.progress-section{
+
+} */
