--- a/style.css
+++ b/style.css
@@ -45,16 +45,28 @@ body{
 }
 
 .banner{
+    display: flex;
+    z-index: -1;
     width: 100%;
     height: 90vh;
+    background-image: url(img.jpg);
+}
+
+.phone{
+    margin: 0;
+    padding: 0;
+    margin-left: 700px;
+    z-index: 10;
+    height: 80vh;
 }
 
 .wellness-section, .library-section, .progress-section{
     display: flex;
     width: 100%;
     height: 100vh;
-    padding: 1em;
+    padding-top: 1em;
 }
+
 
 /* .wellness-section{
 }
