--- a/style.css
+++ b/style.css
@@ -46,16 +46,18 @@ body{
 
 .banner{
     display: flex;
-    z-index: -1;
-    width: 100%;
-    height: 90vh;
-    background-image: url(img.jpg);
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
+    width: calc(100% - 2em);
+    height: calc(90vh - 2em);
+    background-image: url(Assets/bannerImage.jpg);
+    background-size: cover;
 }
 
 .phone{
     margin: 0;
     padding: 0;
-    margin-left: 720px;
     z-index: 10;
     height: 80vh;
 }
