--- a/style.css
+++ b/style.css
@@ -289,3 +289,39 @@ body{
     font-size: 2em;
     color: var(--tertiary-color);
 }
+
+.workout-calendar-head{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 0.5em;
+    color: var(--secondary-font-color);
+    font-size: 1.5em;
+    align-items: center;
+}
+
+.bracket{
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    width: 3em;
+    border-radius: 25px;
+    font-weight: 900;
+}
+
+.selected-bracket{
+    background-color: var(--tertiary-color);
+    color: var(--primary-color);
+}
+
+.calendar-days{
+    padding-top: 2em;
+    display: flex;
+    width: 100%;
+    gap: 1em;
+    justify-content: space-between;
+}
+
+.selected-day{
+    font-weight: 800;
+}
