--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body{
 }
 
 .navbar{
+    z-index: 10000;
+    position: sticky;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
